apps/httpbin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app.kubernetes.io/name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: httpbin
        app.kubernetes.io/name: httpbin
        app.kubernetes.io/component: httpbin
        app.kubernetes.io/part-of: httpbin
    spec:
      securityContext:
        runAsUser: 45346
        runAsGroup: 45346
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: httpbin
          image: mccutchen/go-httpbin:2.25.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 45346
            runAsGroup: 45346
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 32Mi
              cpu: 1m
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: httpbin
          livenessProbe:
            httpGet:
              path: /status/200
              port: httpbin
          readinessProbe:
            httpGet:
              path: /status/200
              port: httpbin
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: location
          whenUnsatisfiable: ScheduleAnyway
