apps/httpbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
    - port: 80
      targetPort: httpbin
  selector:
    app.kubernetes.io/name: httpbin
