apps/httpbin/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: httpbin
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress: []
  ingress:
    - ports:
        - protocol: TCP
          port: httpbin
      from: []
